--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
         nav a:hover, nav a.active { color: var(--primary); }
         .cta-button { background: var(--primary); color: var(--white); padding: 12px 28px; border-radius: 50px; text-decoration: none; font-weight: 600; transition: all 0.3s; display: inline-block; border: none; cursor: pointer; }
         .cta-button:hover { background: var(--primary-dark); transform: translateY(-2px); }
-        .page-header { background: linear-gradient(135deg, var(--primary), var(--primary-dark)); padding: 60px 0; text-align: center; color: var(--white); }
+        .page-header { background: linear-gradient(135deg, rgba(13, 115, 119, 0.95), rgba(9, 84, 86, 0.9)), url('https://images.unsplash.com/photo-1505751172876-fa1923c5c528?w=1920&q=80') center/cover; padding: 60px 0; text-align: center; color: var(--white); }
         .page-header h1 { font-size: 3rem; margin-bottom: 15px; }
         .page-header p { font-size: 1.2rem; opacity: 0.9; }
         .contact-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 50px; padding: 80px 0; }
@@ -50,6 +50,11 @@
         .schedule-item:last-child { border-bottom: none; }
         .schedule-item span:first-child { font-weight: 500; }
         .schedule-item span:last-child { color: var(--text-light); }
+        .map-section { padding: 0 0 80px; }
+        .map-container { background: var(--white); border-radius: 20px; overflow: hidden; box-shadow: var(--shadow); height: 350px; position: relative; }
+        .map-container img { width: 100%; height: 100%; object-fit: cover; }
+        .map-overlay { position: absolute; bottom: 20px; left: 20px; background: var(--white); padding: 15px 25px; border-radius: 10px; box-shadow: var(--shadow); }
+        .map-overlay strong { color: var(--primary); }
         .faq-section { background: var(--white); padding: 80px 0; }
         .faq-section h2 { text-align: center; font-size: 2.5rem; color: var(--primary); margin-bottom: 50px; }
         .faq-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 30px; }
@@ -170,6 +175,17 @@
                         <div class="schedule-item"><span>Sábados</span><span>09:00 - 14:00</span></div>
                         <div class="schedule-item"><span>Domingos</span><span>Cerrado</span></div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="map-section">
+        <div class="container">
+            <div class="map-container">
+                <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?w=1200&h=600&fit=crop&q=80" alt="Mapa de ubicación">
+                <div class="map-overlay">
+                    <strong>📍 FisioVital</strong> - C/ Mayor 45, Madrid
                 </div>
             </div>
         </div>
